Fix admin table squishing on smaller viewports by setting a min-width on tables in overflow container

--- a/style.css
+++ b/style.css
@@ -1273,6 +1273,7 @@ button {
 
 .admin-table {
     width: 100%;
+    min-width: 1100px;
     border-collapse: collapse;
     text-align: left;
 }
